src/plan/snapshots/asupersync__plan__certificate__tests__plan_certificate_dag_cost_snapshot.snap
---
source: src/plan/certificate.rs
assertion_line: 2518
expression: "format!(\"node_count: {}\\njoins: {}\\nraces: {}\\ntimeouts: {}\\ndepth: {}\",\nsnapshot.node_count, snapshot.joins, snapshot.races, snapshot.timeouts,\nsnapshot.depth)"
---
node_count: 7
joins: 1
races: 1
timeouts: 2
depth: 5
