src/plan/snapshots/asupersync__plan__certificate__tests__plan_certificate_join_associativity_render.snap
---
source: src/plan/certificate.rs
assertion_line: 2228
expression: ledger.render()
---
=== Plan Rewrite Explanation ===
Before: 5 nodes (J=2 R=0 T=0, depth=3)
After:  6 nodes (J=3 R=0 T=0, depth=2)
Delta:  nodes=+1, depth=-1
Steps:  1

  [0] Join Associativity: node 4 (Join[2]) -> node 5 (Join[3])
       condition: associativity enabled
