src/plan/snapshots/asupersync__plan__certificate__tests__plan_certificate_multi_step_compact.snap
---
source: src/plan/certificate.rs
assertion_line: 2355
expression: multi_compact
---
CompactCertificate {
    version: CertificateVersion(
        1,
    ),
    policy_bits: 23,
    before_hash: PlanHash(beace2ea6b5a313aef18e781cd2fd5d48501e1793ae79002d681d9ebb658965d),
    after_hash: PlanHash(360f2e3c7bdc6b88fbab21bd44b66415ddd5252a3c16ac4ab9bff459b3ff3ef8),
    before_node_count: 8,
    after_node_count: 11,
    steps: [
        CompactStep {
            rule: 5,
            before: 6,
            after: 9,
        },
        CompactStep {
            rule: 0,
            before: 7,
            after: 10,
        },
    ],
}
