src/plan/snapshots/asupersync__plan__certificate__tests__plan_certificate_race_associativity_render.snap
---
source: src/plan/certificate.rs
assertion_line: 2250
expression: ledger.render()
---
=== Plan Rewrite Explanation ===
Before: 5 nodes (J=0 R=2 T=0, depth=3)
After:  6 nodes (J=0 R=3 T=0, depth=2)
Delta:  nodes=+1, depth=-1
Steps:  1

  [0] Race Associativity: node 4 (Race[2]) -> node 5 (Race[3])
       condition: associativity enabled
